styles/typography.css
/* ... */
@font-face { font-family: Emoji; /* 🐰 🥚 */
  /*
    - https://client9.com/css-color-emoji-stack
    - https://coderwall.com/p/ruv9hq/display-emoji-glyphs-intermingled-with-arbitrary-text
  */
  font-weight: 400;
  font-style: normal;
  font-stretch: 1% 500%; /* Required by Chrome */
  src: Emoji, /* 🤷 - https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/src */
       local('Segoe UI Emoji'),    /* Windows emoji */
       local('Segoe UI Symbol'),   /* Windows emoji */
       local('Noto Color Emoji'),  /* Linux emoji */
       local('Apple Color Emoji'), /* macOS emoji */
       local('Wingdings') /* https://en.wikipedia.org/wiki/Wingdings */
  ;
  /* Emoji unicode blocks */
  unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
} /* @font-face */


/*
  - Viewport Sizes - https://docs.adobe.com/content/help/en/target/using/experiences/vec/mobile-viewports.html
*/
@media screen and ( orientation: portrait ) {
  :root {}
}

@media screen and ( min-width: 768px ) {
  :root {
    --text-align: start;
  }
}

@media screen and ( min-width: 1200px ) {
  :root {
    --column-count: 1;
  }
}

* { padding: var( --margin-collapse-bugfix ) 0 }

html {
  unicode-range: U+0-10FFFF; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/unicode-range */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/tab-size */
  -moz-tab-size:  var(--tab-size);
  tab-size:       var(--tab-size);
  font-size:      var(--font-size);
  text-align:     var(--text-align);
  font-family:    var(--font-family);
  line-height:    var(--line-height);
  word-spacing:   var(--word-spacing);
  letter-spacing: var(--letter-spacing);
  font-size-adjust: from-font; /* Firefox - https://caniuse.com/font-size-adjust */
  font-stretch: 100%;  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-stretch */
  /*
    - https://client9.com/css-color-emoji-stack
    - https://caniuse.com/mdn-css_properties_font-variant-emoji
    - Firefox - https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-emoji
    - Unicode Emoji Variants -  https://unicode.org/emoji/charts/emoji-variants.html
  */
  font-variant-emoji:    emoji;
  font-feature-settings: normal; /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-feature-settings */
  font-display:          fallback; /* https://developer.mozilla.org/en-US/docs/Learn/Performance/CSS#the_font-display_property */
  -webkit-text-size-adjust: var(--text-size-adjust);
     -moz-text-size-adjust: var(--text-size-adjust);
          text-size-adjust: var(--text-size-adjust);

  /* These are technically the same, but use both */
  /* https://css-tricks.com/almanac/properties/w/word-break */
  /* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container */
  /* https://stackoverflow.com/q/17259916/difference-between-overflow-wrap-and-word-break */
  overflow-wrap:  break-word; /* https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap */
      word-wrap:  break-word;
  -ms-word-break: break-word;
      word-break: break-word;

  /* https://medium.com/clear-left-thinking/all-you-need-to-know-about-hyphenation-in-css-2baee2d89179 */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/hyphenate-limit-chars */
  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  /* https://css-tricks.com/almanac/properties/h/hyphenate */
  -webkit-hyphenate-limit-chars: 10 3 4;  /* not yet supported */ 
     -moz-hyphenate-limit-chars: 10 3 4;  /* not yet supported */ 
          hyphenate-limit-chars: 10 3 4;

  /* https://developer.mozilla.org/en-US/docs/Web/CSS/hyphens */
  -webkit-hyphens: auto;
     -moz-hyphens: auto;
      -ms-hyphens: auto;
          hyphens: auto;
}

body {
  margin: 0 auto var(--margin-collapse-bugfix);
  text-rendering: optimizeSpeed; /* https://css-tricks.com/almanac/properties/t/text-rendering */
}

body > * { margin: var(--viewport) }

body > header {
  text-align: center;
  margin: var(--margin-collapse-bugfix) auto;
}
body > nav {
  text-align: left;
  margin: var(--margin-collapse-bugfix) 0 1ch;
}
body > nav::before {
  /* padding: 0.5ch; */
  /* line-height: 1em; */
}

body > main {}
body > aside { padding-top: var(--line-height) }
body > footer { font-size: medium }

main > section:first-of-type, body > aside {}


body main table {
  background: blue;
  font-variant-numeric: oldstyle-nums slashed-zero tabular-nums;
  /* font-variant-numeric: ordinal slashed-zero tabular-nums oldstyle-nums; */
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 * - http://webtypography.net/3.1.1
 */
hgroup {}
header, h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  margin: 1ch auto 1em;
  text-shadow: 0.05em 0.05em 0.2em var(--text-shadow);
}
header {
  font-size: larger;
  /* http://webtypography.net/3.2.1 */
  /* http://webtypography.net/3.2.2 */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-caps */
  font-variant-caps: small-caps;
}
header[role=banner] {
  padding: 0;
  background: red;
  padding: 10vmin 0; /* - https://css-tricks.com/simple-little-use-case-vmin */
}
section > header, nav > header {
  padding: 0;
  max-width: 100%;
  font-size: calc( var(--largest) * var(--golden-ratio) );
}
header *
  { text-transform: initial }

:link:has(header, h1, h2, h3, h4, h5, h6),
:where(header, h1, h2, h3, h4, h5, h6) :link {
  color: currentColor
}

h1 {
  /* TODO: calc () */
  text-shadow: 0.04em 0.04em 0;
  line-height: var(--line-height);
  -webkit-text-fill-color: Canvas;
  -webkit-text-stroke-width: thin;
  -webkit-text-stroke-color: GrayText;
}
body * > h1
  { font-size: 2em; /* Override container H1s  */ }
/* ... */

